webshoppen modal virker.

--- a/header.html
+++ b/header.html
@@ -196,22 +196,22 @@ display: none;
      </li>
 
               <div class="dropdown-content">
-                <a href="eventstyling.html">Event Styling</a>
-                <a href="boligstyling.html">Bolig Styling</a>
+                <a href="eventstyling.php">Event Styling</a>
+                <a href="boligstyling.php">Bolig Styling</a>
                   </div>
                 </div>
 
-                  <a href="webshop.html">
+                  <a href="webshop.php">
                     <li>SHOP</li>
 
                 </a>
 
                 <a href="index.html"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
 
-                <a href="om.html">
+                <a href="om.php">
                     <li>OM STYLE EDITOR</li>
                 </a>
-                <a href="kontakt.html">
+                <a href="kontakt.php">
                     <li>KONTAKT</li>
                 </a>
             </ul>
