--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css" type="text/css">
+    <link rel="stylesheet" href="CSS/home.css" type="text/css">
     <title>Style Editor forside</title>
 </head>
 
