jule nissen også

--- a/index.html
+++ b/index.html
@@ -38,10 +38,29 @@
     <main>
 
         <section class="intro" data-container></section>
+
+
+
+        <!--INTERAKTIV SVG
+        <a href="webshop.html">
+ <div class="tooltip">
+  <img src="img/santa.png" style="height: 200px">
+
+
+ <span class="tooltiptext">Har du husket alle julegaverne? - nej!  så tryk på mig og jeg vil hjælpe dig til at finde de sidste par gaver. </span>
+</div>
+     </a>
+
+      -->
+
+
         <template data-template>
             <article class="stylingeventListview">
                 <h1 class="heading" data-title></h1>
+
                 <p class="description" data-text></p>
+
+
             </article>
         </template>
 
@@ -73,6 +92,7 @@
                 <video data-video src="" type=""></video>
             </article>
         </template>
+
 
     </main>
 
