--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
 
 
-        <!--INTERAKTIV SVG
+        <!--INTERAKTIV SVG   -->
+
         <a href="webshop.html">
  <div class="tooltip">
   <img src="img/santa.png" style="height: 200px">
@@ -51,7 +52,6 @@
 </div>
      </a>
 
-      -->
 
 
         <template data-template>
