--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-    <?php include "header.html";?>
+
+<!--    <?php include "header.html";?>-->
 
     <div class="slideshow">
 
@@ -105,8 +106,10 @@
 
     </main>
 
+<!--
     <?php include "footer.html";?>
 
+-->
 
 
     <script>
