--- a/index.html
+++ b/index.html
@@ -52,14 +52,21 @@
 
         <!--INTERAKTIV SVG   -->
 
-        <a href="webshop.html">
- <div class="tooltip">
-  <img src="img/santa.png" style="height: 200px">
 
+<div id="tooltip">
+
+
+ <a href="webshop.html">
+
+
+<div id="santa" class="waving"></div>
+  </a>
 
  <span class="tooltiptext">Har du husket alle julegaverne? - nej!  så tryk på mig og jeg vil hjælpe dig til at finde de sidste par gaver. </span>
-</div>
-     </a>
+
+
+    </div>
+
 
 
 
@@ -224,6 +231,9 @@
                 videoContainer.appendChild(klon);
             })
         }
+
+
+
 
     </script>
 
