til toppen knap

--- a/eventstyling.html
+++ b/eventstyling.html
@@ -11,6 +11,8 @@
 <body>
    <main>
 
+       <button onclick="topFunction()" id="button" title="Go to top">⥣</button>
+
        <section class="styling_events" data-container></section>
        <template data-template>
            <article class="stylingeventListview">
@@ -84,7 +86,22 @@
             })
         }
 
+        //----------til toppen knap-----------------
 
+        window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("button").style.display = "block";
+    } else {
+        document.getElementById("button").style.display = "none";
+    }
+}
+
+function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+}
 
     </script>
 
