til toppen knapper på bolig og single bolig

--- a/boligstyling.html
+++ b/boligstyling.html
@@ -12,6 +12,8 @@
   <?php include "header.html";?>
    <main>
 
+       <button onclick="topFunction()" id="button" title="Go to top">⥣</button>
+
        <section class="styling_events" data-container></section>
        <template data-template>
            <article class="stylingeventListview">
@@ -86,6 +88,23 @@
                 eventContainer.appendChild(klon);
             })
         }
+
+        //------------til toppen knap-----------
+
+        window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("button").style.display = "block";
+    } else {
+        document.getElementById("button").style.display = "none";
+    }
+}
+
+function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+}
     </script>
 
 </body>
