--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
 
 <div id="tooltip">
 
+<div id="santa_container">
+<div id="santa_sprite">
 
- <a href="webshop.html">
-
-
-<div id="santa" class="waving"></div>
-  </a>
+</div>
+</div>
 
  <span class="tooltiptext">Har du husket alle julegaverne? - nej!  så tryk på mig og jeg vil hjælpe dig til at finde de sidste par gaver. </span>
 
 
     </div>
+
 
 
 
