til toppen på home

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
     <main>
 
+        <button onclick="topFunction()" id="button" title="Go to top">⥣</button>
+
         <section class="intro" data-container></section>
 
 
@@ -235,7 +237,22 @@
             })
         }
 
+        //-----------til toppen knappen-----------
 
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("button").style.display = "block";
+    } else {
+        document.getElementById("button").style.display = "none";
+    }
+}
+
+function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+}
 
 
     </script>
