--- a/kontakt.html
+++ b/kontakt.html
@@ -16,6 +16,8 @@
 
   <body>
 
+    <main>
+
     <button onclick="topFunction()" id="button" title="Go to top">⥣</button>
 
     <section id="Kontakt_information">
@@ -50,6 +52,8 @@
         </div>
 
     </section>
+
+    </main>
 
     <script>
 
