--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Style Editor Kontakt</title>
 
-    <link rel="stylesheet" href="/css/kontakt.css">
+    <link rel="stylesheet" href="CSS/kontakt.css">
     <link href="https://fonts.googleapis.com/css?family=Heebo:300,400" rel="stylesheet">
 
 
