--- a/index.html
+++ b/index.html
@@ -53,23 +53,6 @@
 
 
 
-        <!--INTERAKTIV SVG   -->
-
-
-<div id="tooltip">
-
-<div id="santa_container">
-<div id="santa_sprite">
-
-</div>
-</div>
-
- <span class="tooltiptext">Har du husket alle julegaverne? - nej!  så tryk på mig og jeg vil hjælpe dig til at finde de sidste par gaver. </span>
-
-
-    </div>
-
-
 
 
 
@@ -78,6 +61,30 @@
                 <h1 class="heading" data-title></h1>
 
                 <p class="description" data-text></p>
+                        <!--INTERAKTIV SVG   -->
+
+
+
+
+<div id="santa_container">
+
+<div class="tooltip">
+ <span class="tooltiptext">Har du husket alle julegaverne? - nej!  så tryk på mig og jeg vil hjælpe dig til at finde de sidste par gaver. </span>
+
+<div id="santa_sprite">
+
+<div class ="waving"></div>
+
+</div>
+</div>
+
+
+
+
+    </div>
+
+
+
 
 
             </article>
@@ -91,11 +98,15 @@
 
                     <div class="column1">
                         <img src="" alt="">
+
+
                     </div>
 
                     <div class="column">
                         <h1 class="heading_events" data-title1></h1>
                         <p class="description" data-text></p>
+
+
                     </div>
 
 
@@ -107,6 +118,7 @@
         <section class="container2" data-container2></section>
         <template data-template2>
             <article class="videoListview">
+
                 <p data-title2></p>
                 <video data-video src="" type=""></video>
             </article>
