--- a/index.html
+++ b/index.html
@@ -70,12 +70,10 @@
 
 <div class="tooltip">
  <span class="tooltiptext">Har du husket alle julegaverne? - nej!  så tryk på mig og jeg vil hjælpe dig til at finde de sidste par gaver. </span>
+<a href="webshop.html">
+<div id="santa_sprite"></div>
+</a>
 
-<div id="santa_sprite">
-
-<div class ="waving"></div>
-
-</div>
 </div>
 
 
