--- a/single_eventstyling.html
+++ b/single_eventstyling.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/single_eventstyling.css" type="text/css">
-    <title>Event Styling</title>
+    <title>Event Styling Eventstyling</title>
 
 </head>
 
