--- a/webshop.html
+++ b/webshop.html
@@ -5,10 +5,21 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style Editor Webshop</title>
 
     <link rel="stylesheet" href="CSS/webshop.css">
     <link href="https://fonts.googleapis.com/css?family=Heebo:300,400" rel="stylesheet">
+
+    <title>Style Editor Webshop</title>
+
+
+     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+
 
 
 
