--- a/kontakt.html
+++ b/kontakt.html
@@ -22,6 +22,7 @@
 
 
 <body>
+    <?php include "header.html";?>
 
     <button onclick="topFunction()" id="button" title="Go to top">⥣</button>
 
@@ -58,6 +59,12 @@
 
     </section>
 
+
+</body>
+
+     <?php include "footer.html";?>
+
+
     <script>
         window.onscroll = function() {
             scrollFunction()
@@ -78,7 +85,5 @@
 
     </script>
 
-
-</body>
 
 </html>
