--- a/single_boligstyling.html
+++ b/single_boligstyling.html
@@ -126,13 +126,28 @@
             //slideshow images
 
             dest.querySelector(".image1").src = home.acf.image1;
+             dest.querySelector(".image1").alt = home.acf.image1;
+
             dest.querySelector(".image2").src = home.acf.image2;
+            dest.querySelector(".image2").alt = home.acf.image2;
+
             dest.querySelector(".image3").src = home.acf.image3;
+            dest.querySelector(".image3").alt = home.acf.image3;
+
             dest.querySelector(".image4").src = home.acf.image4;
+            dest.querySelector(".image4").alt = home.acf.image4;
+
             dest.querySelector(".image5").src = home.acf.image5;
+            dest.querySelector(".image5").alt = home.acf.image5;
+
             dest.querySelector(".image6").src = home.acf.image6;
+            dest.querySelector(".image6").alt = home.acf.image6;
+
             dest.querySelector(".image7").src = home.acf.image7;
+            dest.querySelector(".image7").alt = home.acf.image7;
+
             dest.querySelector(".image8").src = home.acf.image8;
+            dest.querySelector(".image8").alt = home.acf.image8;
 
         }
 
