--- a/eventstyling.html
+++ b/eventstyling.html
@@ -21,6 +21,7 @@
 
        <button onclick="topFunction()" id="button" title="Go to top">⥣</button>
 
+
        <section class="styling_events" data-container></section>
        <template data-template>
            <article class="stylingeventListview">
@@ -28,6 +29,8 @@
                <p class="description" data-text></p>
            </article>
        </template>
+
+
 
        <section class="events_portfolio" data-container1></section>
        <template data-template1>
@@ -85,6 +88,7 @@
                 let klon = eventTemplate.cloneNode(true).content;
                 klon.querySelector("[data-title1]").textContent = events.title.rendered;
                 klon.querySelector("img").src = events.acf.image;
+                  klon.querySelector("img").alt = events.acf.image;
                 //single
                 klon.querySelector("img").addEventListener("click", ()=>{
                     window.location.href = "single_eventstyling.html?id=" + events.id;
