--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                 </div>
 
 
-
-                <p data-title2></p>her
+        <a href="om.html">
+                <p data-title2></p>
                 <video data-video src="" type=""></video>
-
+            </a>
             </article>
         </template>
 
