--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 
         <div class="slide fade">
 
-            <a href="eventstyling.html"> <img src="img/event-01.png" alt=""></a>
+            <a href="eventstyling.html"> <img src="img/eventslide.png" alt=""></a>
 
         </div>
         <div class="slide fade">
 
-            <a href="boligstyling.html"><img src="img/bolig-02.png" alt=""></a>
+            <a href="boligstyling.html"><img src="img/boligslide.png" alt=""></a>
 
         </div>
         <div class="slide fade">
 
-            <a href="webshop.html"> <img src="img/shop-03.png" alt=""></a>
+            <a href="webshop.html"> <img src="img/shopslide.png" alt=""></a>
 
         </div>
 
@@ -121,10 +121,10 @@
                 </div>
 
 
-        <a href="om.html">
-                <p data-title2></p>
-                <video data-video src="" type=""></video>
-            </a>
+                <a href="om.html">
+                    <p data-title2></p>
+                    <video data-video src="" type=""></video>
+                </a>
             </article>
         </template>
 
@@ -271,6 +271,7 @@
             document.body.scrollTop = 0;
             document.documentElement.scrollTop = 0;
         }
+
     </script>
 
 </body>
