--- a/om.html
+++ b/om.html
@@ -33,7 +33,7 @@
                 <div class="column">
                     <img class="image" src="" alt="">
                 </div>
-                <div class="column">
+                <div class="column1">
                     <h2 data-title></h2>
                     <p data-text></p>
                 </div>
