rettelse i header.html

--- a/header.html
+++ b/header.html
@@ -1,8 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
-
-
 <style>
 header {
     display: grid;
@@ -191,29 +188,22 @@ display: none;
             <ul>
 
 
-                    <div class="dropdown">
-     <li>PORTFOLIO <i class="fa fa-caret-down"></i>
-     </li>
+            <div class="dropdown">
+            <li>PORTFOLIO <i class="fa fa-caret-down"></i></li>
 
-              <div class="dropdown-content">
+             <div class="dropdown-content">
                 <a href="eventstyling.php">Event Styling</a>
                 <a href="boligstyling.php">Bolig Styling</a>
                   </div>
-                </div>
+            </div>
 
-                  <a href="webshop.php">
-                    <li>SHOP</li>
+            <a href="webshop.php"><li>SHOP</li></a>
 
-                </a>
+            <a href="index.php"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
 
-                <a href="index.html"><img class="nav_logo" src="img/logo_styleeditor.svg" alt="nav_logo"></a>
+            <a href="om.php"><li>OM STYLE EDITOR</li></a>
+            <a href="kontakt.php"><li>KONTAKT</li></a>
 
-                <a href="om.php">
-                    <li>OM STYLE EDITOR</li>
-                </a>
-                <a href="kontakt.php">
-                    <li>KONTAKT</li>
-                </a>
             </ul>
         </nav>
     </header>
